fixed login spacing, fixed slideshow on homepage

--- a/stylehome.css
+++ b/stylehome.css
@@ -1,83 +1,78 @@
-/* background color */
+/* General body styling */
 body {
   background-color: #ab5c2e; 
 }
 
-/* title */
+/* Title styling */
 h1 {
     color: #ffffff;
     font-size: 60px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     float: right;
-    height: 20px;
     margin-top: 170px;
-    width: 45%
+    width: 45%;
 }
 
-/* subtitle description */
+/* Subtitle styling */
 h4 {
     color: rgb(236, 204, 136);
     font-family: Georgia, 'Times New Roman', Times, serif;
     width: 35%;
     position: fixed;
     top: 280px;
-    right: 120px;
+    right: 160px;
 }
 
-/* links */
-.LinktoHome {
+/* Link styling */
+a {
   color: rgb(236, 204, 136);
   font-size: 13px;
   font-family: Georgia, 'Times New Roman', Times, serif;
+  text-decoration: none;
   position: fixed;
   top: 20px;
+}
+
+.LinktoHome {
   right: 500px;
-  text-decoration: none;
 }
 
 .LinktoFeed {
-  color: rgb(236, 204, 136);
-  font-size: 13px;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  position: fixed;
-  top: 20px;
   right: 350px;
-  text-decoration: none;
 }
 
 .LinktoFAQ {
-  color: rgb(236, 204, 136);
-  font-size: 13px;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  position: fixed;
-  top: 20px;
   right: 200px;
-  text-decoration: none;
 }
 
-#rectangle {
+/* Rectangle styling */
+.rectangle {
   width: 50px;
-  height: 600px;
+  height: 750px;
   background: rgb(234, 188, 89);
   border-radius: 15px 50px 30px 5px;
-  display: block;
+  position: absolute;
+  top: 20px;
+  left: 20px;
 }
 
-* {box-sizing:border-box}
-
+/* Slideshow container styling */
 .slideshow-container {
   position: fixed;
   top: 160px;
-  left: 80px;
+  left: 130px;
+  width: 30%;
 }
 
+/* Hide all slides by default */
 .mySlides {
   display: none;
 }
 
-/* Add a pointer when hovering over the thumbnail images */
-.cursor {
-  cursor: pointer;
+/* Slideshow image styling */
+.slideshow-image {
+  width: 100%;
+  height: 300px;
 }
 
 /* Next & previous buttons */
@@ -85,31 +80,32 @@ h4 {
 .next {
   cursor: pointer;
   position: absolute;
-  top: 40%;
+  top: 50%;
   width: auto;
   padding: 16px;
-  margin-top: -50px;
+  margin-top: -22px;
   color: white;
   font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
+  font-size: 18px;
   user-select: none;
-  -webkit-user-select: none;
 }
 
-/* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+.prev {
+  left: 0;
+  border-radius: 0 3px 3px 0;
 }
 
-/* Number text (1/3 etc) */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Number text */
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
@@ -118,33 +114,28 @@ h4 {
   top: 0;
 }
 
-/* Container for image text */
-.caption-container {
+/* Dot indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.dots {
   text-align: center;
-  background-color: #222;
-  padding: 2px 16px;
-  color: white;
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Six columns side by side */
-.column {
-  float: left;
-  width: 16.66%;
-}
-
-/* Add a transparency effect for thumnbail images */
-.demo {
-  opacity: 0.6;
+  padding: 20px;
+  position: fixed;
+  top: 420px;
+  left: 120px;
+  width: 30%;
 }
 
 .active,
-.demo:hover {
-  opacity: 1;
+.dot:hover {
+  background-color: #717171;
 }
-
